--- a/package.json
+++ b/package.json
@@ -2,14 +2,29 @@
   "name": "slotbookservice",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "6.2.2",
+    "npm": "3.9.5"
+  },
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "asynch": "^0.5.2",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "istanbul": "^0.4.4",
     "log4js": "^0.6.38",
+    "momentjs": "^1.1.14",
+    "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
     "serve-favicon": "^2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3",
+    "sinon": "^1.17.4",
+    "supertest": "^1.2.0",
+    "istanbul": "^0.4.4"
   }
 }
