--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.14.0",
     "istanbul": "^0.4.4",
     "log4js": "^0.6.38",
-    "momentjs": "^1.1.14",
+    "momentjs": "1.1.14",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
     "serve-favicon": "^2.3.0"
